[package]
name = "termtime"
version = "0.1.0"
edition = "2021"
authors = ["Cowboy <cowboy8625@protonmail.com>"]
description = "Linux base terminal timer"
readme = "README.md"
repository = "https://github.com/cowboy8625/termtime"
license-file = "LICENSE"
keywords = ["timer"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version="3.1.2", features=["cargo"] }
crossterm = "0.23.0"
humantime = "2.1.0"
rand = "0.8.5"
